fix large spacing at bottom of page issue

--- a/src/theme/DocSidebar/Desktop/styles.module.scss
+++ b/src/theme/DocSidebar/Desktop/styles.module.scss
@@ -1,6 +1,7 @@
-@import '../../../css/breakpoints.css';
+@use '../../../css/breakpoints.scss' as breakpoints;
 
-@media (min-width: var(--mobile-breakpoint)) {
+@media (min-width: breakpoints.$mobile-breakpoint) {
+
   .sidebar {
     display: flex;
     flex-direction: column;
